--- a/css/resume/fotomatic/own/index.css
+++ b/css/resume/fotomatic/own/index.css
@@ -5,7 +5,7 @@ html {
   
   .main-content {
     position: relative;
-    top: 5.3125rem; /* To offset for fixed header. */
+    top: 5.3125rem; 
     background-image: url(images/banner-landingpage.jpg);
   }
 
